update syling on grouse grind page to fix page cutoff bug when hosted

--- a/src/Components/GrouseGrind/grouseGrind.scss
+++ b/src/Components/GrouseGrind/grouseGrind.scss
@@ -6,6 +6,8 @@
 
   &__title {
     display: flex;
+    margin-bottom: 0;
+    text-align: center;
 
     padding-left: 1rem;
     font-size: 1rem;
@@ -16,10 +18,10 @@
   &__introText {
     font-size: 0.8rem;
     padding: 0 1rem 0 1rem;
+    margin-top: 0;
   }
   &__inputBox {
     display: flex;
-
     justify-content: center;
     justify-content: space-around;
   }
@@ -62,8 +64,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
-  padding: 1rem;
+  text-align: center;
 
   margin-top: 0.5rem;
 
